--- a/src/ui/page/listing/Listing.pug
+++ b/src/ui/page/listing/Listing.pug
@@ -2,11 +2,10 @@ script.
 	import api from '../../../api/index.js'
 	import { StringMatch } from '../../../lib/index.js'
 	import Button from '../../framework/Button.pug'
+	import ButtonGroup from '../../framework/ButtonGroup.pug'
 	import ListingNameTag from './ListingNameTag.pug'
 	import ListingPost from './ListingPost.pug'
 	import ListingSearchField from './ListingSearchField.pug'
-	import ListingSort from './ListingSort.pug'
-	import ListingTimeRange from './ListingTimeRange.pug'
 	export data = null
 	export type = null
 
@@ -41,7 +40,6 @@ script.
 			display_name = "#{user_name}/#{multireddit_name}"
 			base_path = "/m/#{user_name}/#{multireddit_name}"
 			official_path = "/user/#{user_name}/m/#{multireddit_name}"
-			sort_options = ['new', 'rising', 'hot', 'controversial', 'top', 'search']
 			if posts_sort.split('-')[0] is 'search'
 				if search_text
 					if user_name is 'r'
@@ -53,7 +51,6 @@ script.
 			display_name = subreddit_name
 			base_path = "/r/#{subreddit_name}"
 			official_path = "/r/#{subreddit_name}"
-			sort_options = ['new', 'rising', 'hot', 'controversial', 'top', 'search']
 			if posts_sort.split('-')[0] is 'search'
 				if search_text
 					base_page_id = api.ID('search_posts_in_subreddit', subreddit_name, posts_sort.split('-')[1], search_text, page_size)
@@ -80,8 +77,48 @@ script.
 			display_name = user_name
 			base_path = "/u/#{user_name}"
 			official_path = "/u/#{user_name}"
-			sort_options = ['new', 'hot', 'controversial', 'top']
 			base_page_id = api.ID('user_posts', user_name, posts_sort, page_size)
+	
+	sort_options = [
+		{
+			label: 'Top',
+			value: 'top'
+		}
+		{
+			label: 'New',
+			value: 'new'
+		}
+		{
+			label: 'Controversial',
+			value: 'controversial'
+		}
+		{
+			label: 'Search',
+			value: 'search'
+		}
+	]
+	time_range_options = [
+		{
+			label: 'Day',
+			value: 'day'
+		}
+		{
+			label: 'Week',
+			value: 'week'
+		}
+		{
+			label: 'Month',
+			value: 'month'
+		}
+		{
+			label: 'Year',
+			value: 'year'
+		}
+		{
+			label: 'All',
+			value: 'all'
+		}
+	]
 
 	load_page = (page_number) ->
 		if cache_key
@@ -129,10 +166,10 @@ nav.listing
 				{#if display_name}
 					ListingNameTag(link={base_path} text={display_name} type={type})
 			{#if sort_options}
-				menu
-					ListingSort(base_path={base_path} selection={posts_sort.split('-')[0]} sort_options={sort_options})
+				menu.listing-sort-options
+					ButtonGroup(baselink={base_path + '/'} options={sort_options} selected={posts_sort.split('-')[0]} title='Sort')
 					{#if ['top', 'controversial', 'search'].includes(posts_sort.split('-')[0])}
-						ListingTimeRange(base_path={base_path + '/' + posts_sort.split('-')[0]} selection={posts_sort.split('-')[1]})
+						ButtonGroup(baselink={base_path + '/' + posts_sort.split('-')[0] + '-'} options={time_range_options} selected={posts_sort.split('-')[1]} title='Time range')
 					{#if posts_sort.split('-')[0] === 'search'}
 						ListingSearchField(base_path={base_path + '/' + posts_sort} initial_query={search_text})
 			{#if filterable}
@@ -169,5 +206,8 @@ style.
 		top 0
 		h1
 			font inherit
-		menu
-			margin-top 1em
+	.listing-sort-options
+		display flex
+		flex-flow row wrap
+		gap 10px
+		margin-top 20px
