--- a/src/ui/framework/ButtonGroup.pug
+++ b/src/ui/framework/ButtonGroup.pug
@@ -19,7 +19,9 @@ style.
 		gap 2px
 		padding 0
 	legend
-		font-feature-settings 'cpsp' 1
+		color var(--c-text-weak)
+		font-feature-settings 'cpsp'
 		font-size 10px
-		opacity 0.5
+		font-weight bold
+		padding 3px 0
 		text-transform uppercase
