--- a/src/ui/stylesheet.styl
+++ b/src/ui/stylesheet.styl
@@ -121,6 +121,11 @@ th
 a
 	color inherit
 	text-decoration none
+	&:empty
+		background var(--c-text-strong)
+		display inline-block
+		height 1em
+		width 4em
 address
 	font-style normal
 sub
