--- a/src/ui/page/post/PostComment.pug
+++ b/src/ui/page/post/PostComment.pug
@@ -48,17 +48,17 @@ script.
 				PostAge(created={comment.created_utc} edited={comment.edited})
 			footer(style='visibility:hidden')
 				PostScore(awards={comment.all_awardings} controversiality={comment.controversiality} upload_vote={(vote) => api.submit(api.ID('comment_vote', short_id), { numerical_vote: vote })} value={!comment.score_hidden && comment.score} vote={comment.likes == null ? 0 : comment.likes ? 1 : -1})
-		{#if !out_of_context && comment.replies.length > 0}
-			{#key comment.replies}
-				ol.comment-replies
+		{#if !out_of_context}
+			ol.comment-replies
+				{#if comment.replies.length > 0}
 					{#each comment.replies as reply_short_id}
 						svelte:self(short_id={reply_short_id})
-					{#if comment.more_replies}
-						.comment-more-replies
-							Button(action={() => api.load(comment.more_replies_id)} loading={more_replies_loading} text="Load {comment.num_more_replies} more")
-					{#if comment.deeper_replies}
-						.comment-more-replies
-							Button(text='Continue this thread...')
+				{#if comment.num_more_replies > 0}
+					.comment-more-replies
+						Button(action={() => api.load(comment.more_replies_id)} loading={more_replies_loading} text="{comment.num_more_replies} {comment.num_more_replies === 1 ? 'reply' : 'replies'}")
+				{#if comment.deeper_replies}
+					.comment-more-replies
+						Button(link='/r/{comment.subreddit}/post/{comment.link_id.slice(3)}/comment/{short_id}' text='Continue thread...')
 
 style.
 	.comment
