--- a/src/ui/page/post/Post.pug
+++ b/src/ui/page/post/Post.pug
@@ -282,7 +282,11 @@ style.
 	.post-prediction-options > li
 		display flex
 	.post-selftext
+		background rgba(255,255,255,0.1)
+		border-radius 10px
 		margin-top 20px
+		padding 10px
+		width 400px
 	.post-tags
 		display flex
 		gap 3px
