ui: reorganize and restore 1/2 layout

--- a/src/ui/app/AppGlobalNavigation.pug
+++ b/src/ui/app/AppGlobalNavigation.pug
@@ -1,8 +1,8 @@
 script.
 	import { getContext } from 'svelte'
 	import api from '../../api/index.js';
-	import Button from '../framework/Button.pug'
-	import PopupWindow from '../framework/PopupWindow.pug'
+	import Button from '../common/Button.pug'
+	import PopupWindow from '../common/PopupWindow.pug'
 	show_feedback = false
 	show_help = false
 	show_settings = false
