--- a/src/ui/feature/listing/ListingSearchField.pug
+++ b/src/ui/feature/listing/ListingSearchField.pug
@@ -1,5 +1,5 @@
 script.
-	import Button from '../../framework/Button.pug'
+	import Button from '../../common/Button.pug'
 	export base_path = '/'
 	export initial_query = null
 	query = initial_query ? ''
