--- a/src/ui/feature/message/Message.pug
+++ b/src/ui/feature/message/Message.pug
@@ -1,6 +1,6 @@
 script.
 	import api from '../../../api/index.js'
-	import TextHTML from '../../framework/TextHTML.pug'
+	import TextHTML from '../../common/TextHTML.pug'
 	export short_id = null
 	private_message = null
 	api.loadWatch(api.ID('private_message', short_id),
