--- a/src/ui/feature/post/PostCommentList.pug
+++ b/src/ui/feature/post/PostCommentList.pug
@@ -2,8 +2,8 @@ script.
 	import { getContext, setContext } from 'svelte';
 	import api from '../../../api/index.js'
 
-	import Button from '../../framework/Button.pug'
-	import ButtonGroup from '../../framework/ButtonGroup.pug'
+	import Button from '../../common/Button.pug'
+	import ButtonGroup from '../../common/ButtonGroup.pug'
 	import PostComment from './PostComment.pug'
 	
 	export focus_comment_context_level = null
