--- a/src/ui/app/AppRouter.pug
+++ b/src/ui/app/AppRouter.pug
@@ -1,6 +1,8 @@
 script.
-	import parse_route from '../parse_route.coffee'
-	import BaseApplicationRoute from './BaseApplicationRoute.pug'
+	import AppAccountContext from './AppAccountContext.pug'
+	import AppOfficialSiteRedirect from './AppOfficialSiteRedirect.pug'
+	import AppPage from './AppPage.pug'
+	import parse_route from './parse_route.coffee'
 	route = null
 
 	set_route =
@@ -33,7 +35,7 @@ script.
 		(event) ->
 			if is_unmodified_left_click(event)
 				link = event.target.closest('a')
-				if link
+				if link and link.href
 					if is_same_origin(link)
 						if is_same_path(link) and not is_same_hash(link) then return # allow hash change scrolling behavior
 						internal_navigate(link)
@@ -70,4 +72,8 @@ script.
 
 	set_route()
 
-BaseApplicationRoute(route={route})
+{#if route.page_type === 'official_site'}
+	AppOfficialSiteRedirect(path={route.page_data.path})
+{:else}
+	AppAccountContext
+		AppPage(data={route.page_data} type={route.page_type})
